--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <p>This is a new repo</p>
 <p>this is new feature (dropdown)</p>
 <p>this is new feature (button)</p>
+<p>This is new paragraph</p>
 
